--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,3 +59,11 @@ button {
   width: 60%;
   padding: 1rem;
 }
+
+
+.pictures img {
+  max-width: 50%;
+}
+.pictures h1 {
+  color: rgb(11, 123, 11);
+}
