we've added the use of the NYTimes API

--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -20,5 +20,12 @@
       <h1>{{ pageTitle }}</h1>
       {{ content }}
     </main>
-  </body>
+  
+
+    <!-- this runs on all the pages... becuase it's in the _includes
+            Note, when you change the page... you reload the scripts.js and so you wipe out what you see
+            in the console.
+    -->
+    <script src="/js/scripts.js"></script>
+</body>
 </html>
