--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,7 +52,7 @@ button {
   color: #fff;
   border-radius: 4px;
   font-size: 1rem;
-  width: 4rem;
+  /* width: 4rem;    This makes the Articles work get cut off*/
 }
 
 .pics .content img {
@@ -66,4 +66,17 @@ button {
 }
 .pictures h1 {
   color: rgb(11, 123, 11);
+}
+
+
+@media (min-width: 480px) {
+  .stories {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+  }
+}
+
+.stories .item {
+  border-bottom: 1px dashed #aaa;
 }
